--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
-        <add assembly="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
@@ -17,6 +17,6 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="none"/>
   </appSettings>
   <connectionStrings>
-    <add name="WebbAppConnString" connectionString="server=127.0.0.1; User Id=root;Password=; database=movies_store;" providerName="MySql.Data.MySqlClient"/>
+    <add name="WebbAppConnString" connectionString="server=127.0.0.1; User Id=root;Password=root; database=movies_store;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
 </configuration>
