--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,6 @@
     
   </appSettings>
   <connectionStrings>
-    <add name="WebbAppConnString" connectionString="server=127.0.0.1; User Id=root;database=movies_store;" providerName="MySql.Data.MySqlClient"/>
+    <add name="WebbAppConnString" connectionString="server=127.0.0.1; User Id=root;Password=root;database=movies_store;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
 </configuration>
