--- a/Web.config
+++ b/Web.config
@@ -7,8 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
-       
-        <add assembly="MySql.Data.CF, Version=6.9.5.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
@@ -20,16 +19,4 @@
   <connectionStrings>
     <add name="WebbAppConnString" connectionString="server=127.0.0.1; User Id=root;Password=; database=movies_store;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
